# Main-Robotics-Processing-and-Communications-Unit

./: README.md  Request of Proposal of SW PRODUCT.pptx  STARTUP_GUIDE.md  architecture_diagram.drawio  architecture_diagram_final.drawio
Dashboard/: docker-compose.yml
Dashboard/backend/: DockerFile  hearteat_manager.py  main.py  requirements.txt  robot_data.db
Dashboard/dashboard/: Dockerfile  default.conf
Dashboard/dashboard/static/: advanced.html  index.html
Dashboard/mosquitto/config/: mosquitto.conf
Dashboard/robot_agent/: Dockerfile  robot_agent.py
s1_ws/src/s1_brain/: README.md  package.xml  setup.cfg  setup.py
s1_ws/src/s1_brain/launch/: s1_bringup.launch.py
s1_ws/src/s1_brain/s1_brain/: command_bridge.py  command_test.py  diagnostics_node.py  heartbeat_bridge.py  logs_bridge.py  master_controller.py  telemetry_bridge.py  telemetry_publisher.py
s1_ws/src/s1_bringup/: package.xml  setup.cfg  setup.py
s1_ws/src/s1_bringup/launch/: full_robot.launch.py
s1_ws/src/s1_drivers/: CMakeLists.txt  package.xml
s1_ws/src/s1_drivers/src/: driver_node.cpp
s1_ws/src/s1_interfaces/: CMakeLists.txt  package.xml
s1_ws/src/s1_interfaces/msg/: Command.msg  EstopCommand.msg  HealthReport.msg  Heartbeat.msg  LogEntry.msg  S1Command.msg  Telemetry.msg
s1_ws/src/s_subsystems/: README.md  package.xml  setup.cfg  setup.py
s1_ws/src/s_subsystems/s_subsystems/: s2_perception.py  s3_motion.py  s4_actuation.py
scripts/: aggregate_code.ps1  diagnose_ros2.sh  launch_full_system.sh  launch_master_controller.sh  start_system.ps1
