<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>s1_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for complete S1 robot system (drivers + brain + subsystems)</description>
  <maintainer email="G.RajSuriyan@in.bosch.com">aju3cob</maintainer>
  <license>MIT</license>

  <exec_depend>s1_drivers</exec_depend>
  <exec_depend>s1_brain</exec_depend>
  <exec_depend>s_subsystems</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
