<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>s_subsystems</name>
  <version>0.0.0</version>
  <description>Mock subsystems (S2 perception, S3 motion, S4 actuation) for S1 robot simulation</description>
  <maintainer email="G.RajSuriyan@in.bosch.com">aju3cob</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>s1_interfaces</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
